--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             // 配置项: 请将 YOUR_WORKER_URL 替换为你的 Cloudflare Worker 地址
             // =================================================================
             config: {
-                workerUrl: 'https://YOUR_WORKER_URL' // 例如: https://my-blog-worker.username.workers.dev
+                workerUrl: 'https://blog.xy193.workers.dev' // 例如: https://my-blog-worker.username.workers.dev
             },
 
             // --- 状态管理 ---
